--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="jquery.ui.touch-punch.min.js"></script>
-<script>
+<script type="module">
+  import shipDB from './shipDB.json' assert { type: "json" }
+  console.log(shipDB);
   let allowMultipleFleetTags = true;
 
   let fleetTags = [
