--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="jquery.ui.touch-punch.min.js"></script>
 <script src="shipDB.js"></script>
-<script type="module">
+<script>
   console.log(shipDB);
   let allowMultipleFleetTags = true;
 
