Fixed a bug of the unowned ship registration.

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       };
       ships.push(ship);
     }
-    ships.push({ type:'US', name:'[未所持艦]', fleetTags:{} });
+    ships.push({ type:0, name:'[未所持艦]', fleetTags:{} });
   }
 
   let operations = [
