Introduced lv property.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
       const ship = {
         type: typeData.stype,
         name: typeData.name,
+        lv: shipData.lv,
         fleetTags:{}
       };
       ships.push(ship);
